<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.beesightsoft.training6.domain.SigninActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_signin_stv_name"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <EditText
        android:id="@+id/activity_signin_et_title"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_signin_stitle" />


    <EditText
        android:id="@+id/activity_signin_et_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:hint="@string/activity_signin_sbody"/>


    <Button
        android:id="@+id/activity_signin_btn_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="#40f2ff"
        android:text="@string/activity_signin_sbtnpost"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/activity_signin_btn_put"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="#40f2ff"
        android:text="@string/activity_signin_sbtnput"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/activity_signin_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="#40f2ff"
        android:text="@string/activity_signin_sbtndelete"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/activity_signin_tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        />

</LinearLayout>